# JobShop

./: CMakeLists.txt  README.md  main.cpp
data/: 1.txt  data.txt  data1.csv  result111.csv
include/: Base.h  CMakeLists.txt  Lane.cpp  Lane.h  calculate_fitness.cpp  calculate_fitness.h  car_class.cpp  car_class.h  v_delivery_traverse_machine.cpp  v_delivery_traverse_machine.h  v_receiving_traverse_machine.cpp  v_receiving_traverse_machine.h
scrip/: matlab.mat  optimize_target1.m  optimize_target2.m
